[package]
name = "nary"
version = "0.1.0"
authors = ["Grant Miner <>"]

[dependencies]
serde_json = "1.0.39"
serde_derive = "1.0.90"
hyper = "0.10"
hyper-native-tls = "0.3.0"
tar = "0.4.16"
flate2 = "1.0.7"
indicatif = "0.9.0"
semver = "0.9.0"
lazy_static = "1.3.0"
percent-encoding = "1.0.1"
git2 = "0.8.0"
failure = "0.1.5"
failure_derive = "0.1.5"
