[package]
name = "nary"
version = "0.1.0"
authors = ["Grant Miner <>"]

[dependencies]
serde_json = "1.0.40"
serde_derive = "1.0.94"
hyper = "0.10"
hyper-native-tls = "0.3.0"
tar = "0.4.26"
flate2 = "1.0.9"
indicatif = "0.11.0"
semver = "0.9.0"
lazy_static = "1.3.0"
percent-encoding = "1.0.1"
git2 = "0.9.1"
failure = "0.1.5"
failure_derive = "0.1.5"
