[package]
name = "nary"
version = "0.1.0"
authors = ["Grant Miner <>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde_derive = "1.0.100"
hyper = "0.10"
hyper-native-tls = "0.3.0"
tar = "0.4.26"
flate2 = "1.0.11"
indicatif = "0.12.0"
semver_rs = "0.1.3"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
git2 = "0.10.0"
failure = "0.1.5"
failure_derive = "0.1.5"
dirs = "2.0.2"
structopt = "0.3.1"
