[package]
name = "nary_bin"
version = "0.1.0"
authors = ["Grant Miner <ggcode1@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
nary_lib = { path = "../nary_lib" }
anyhow = "1.0.40"
structopt = "^0.3.3"
serde_json = "^1.0.41"
serde_derive = "^1.0.101"
dirs = "^2.0.2"
indicatif = "^0.16.0"

[[bin]]
name = "nary"
path = "src/main.rs"