[package]
name = "nary_bin"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
nary_lib = { path = "../nary_lib" }
anyhow = "1.0.40"
structopt = "^0.3.3"
serde_json = "^1.0.41"
serde_derive = "^1.0.101"
dirs = "5.0.0"
indicatif = { version = "^0.16.0", features = ["improved_unicode"] }

[[bin]]
name = "nary"
path = "src/main.rs"
