[package]
name = "nary_bin"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
nary_lib = { path = "../nary_lib" }
anyhow = "1.0.75"
structopt = "0.3.26"
serde_json = "1.0.108"
serde_derive = "1.0.193"
dirs = "5.0.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }

[[bin]]
name = "nary"
path = "src/main.rs"
