[package]
name = "nary_lib"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde_json = "^1.0.41"
serde_derive = "^1.0.101"
hyper = "^0.14"
hyper-native-tls = "^0.3.0"
tar = "^0.4.26"
flate2 = "^1.0.12"
semver_rs = "^0.1.3"
lazy_static = "^1.4.0"
percent-encoding = "^2.1.0"
git2 = "^0.13.17"
dirs = "^2.0.2"
anyhow = "1.0.40"
thiserror = "1.0"
petgraph = "0.5.1"
bidir-map = "1.0.0"
indexmap = "1.6.2"
static_init = "1.0.1"

[dev-dependencies]
indoc = "1.0.3"

[lib]
name = "nary_lib"