[package]
name = "nary_lib"
version = "0.1.0"
authors = ["Grant Miner <gx0r@protonmail.com>"]
edition = "2021"
publish = false

[dependencies]
petgraph = "0.6.4"
serde_json = "1.0.108"
serde_derive = "1.0.193"
hyper = "^0.10"
hyper-native-tls = "^0.3.0"
tar = "0.4.40"
flate2 = "1.0.28"
semver_rs = "0.2.0"
lazy_static = "^1.4.0"
percent-encoding = "^2.3.1"
git2 = "0.18.1"
dirs = "5.0.1"
anyhow = "1.0.75"
thiserror = "1.0.50"
bidir-map = "1.0.0"
indexmap = "2.1.0"
static_init = "1.0.3"

[dev-dependencies]
indoc = "2.0.1"

[lib]
name = "nary_lib"
